Now something is added

--- a/connectivity with sql.ipynb
+++ b/connectivity with sql.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4cd3797a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import mysql.connector"
+    "import mysql.connector as connection"
    ]
   },
   {
@@ -22,8 +22,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "6724219d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.read_excel(\"EssiesLtd.xlsx\", sheet_name='RetailSales')\n",
+    "df1.to_csv(\"Retail Sales.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fb9a8211",
+   "id": "8592872f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dedc06d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60c8c9b0",
    "metadata": {},
    "outputs": [],
    "source": []
